[metadata]
name = hsz1273327.github.io
version = 0.0.0
author = hsz12
author_email = 
description = 
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = 
license = MIT License
classifiers = 
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
tests_require = 
	coverage >= 5.5
	mypy >= 0.800
	autopep8 >= 1.5.6
	pylint >= 2.8.0
	pydocstyle>=6.0.0
setup_requires = 
	wheel >= 0.36.2
	setuptools >= 47.1.0
install_requires = 
	requests >= 2.25.1
	tensorflow-serving-api >= 2.5.1

[options.packages.find]
include = hsz1273327.github.io
exclude = tests

